Recapitulating changes of 29-May-2015 in the new context

--- a/drophash/drophash.vcxproj
+++ b/drophash/drophash.vcxproj
@@ -185,6 +185,7 @@
     <Text Include="abc.txt" />
     <Text Include="alpha.txt" />
     <Text Include="empty.txt" />
+    <Text Include="Expect.txt" />
     <Text Include="longTestVector.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
