--- a/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.fsproj
+++ b/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.fsproj
@@ -24,6 +24,11 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.6.1" />
     <PackageReference Include="Avalonia.Desktop" Version="0.6.1" />
+    <PackageReference Include="Avalonia.HtmlRenderer" Version="0.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
