--- a/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.fsproj
+++ b/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.fsproj
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.6.1" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.6.1" />
+    <PackageReference Include="Avalonia" Version="0.6.2-build5450-beta" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.6.2-build5450-beta" />
     <PackageReference Include="Avalonia.HtmlRenderer" Version="0.6.1" />
   </ItemGroup>
 
