C# doesn't work either, so it's not just the language

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ packages/
 Avalonia/Avalonia/Drophash.Avalonia/bin/
 Avalonia/Avalonia/Drophash.Avalonia/obj/
 packages-avalonia/
+Avalonia/AvaloniaApplication1/bin/
+Avalonia/AvaloniaApplication1/obj/
