--- a/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.fsproj
+++ b/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.fsproj
@@ -26,13 +26,14 @@
   <ItemGroup />
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.6.2-build5491-beta" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.6.2-build5491-beta" />
+    <PackageReference Include="Avalonia" Version="0.7.0" />
+    <PackageReference Include="Avalonia.Desktop" Version="0.7.0" />
     <PackageReference Include="Avalonia.HtmlRenderer" Version="0.6.1" />
+    <PackageReference Include="System.Reactive.Core" Version="4.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="4.5.0" />
+    <PackageReference Update="FSharp.Core" Version="4.5.2" />
   </ItemGroup>
 
 </Project>
