--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ Avalonia/Avalonia/Drophash.Avalonia/obj/
 packages-avalonia/
 Avalonia/AvaloniaApplication1/bin/
 Avalonia/AvaloniaApplication1/obj/
+*.lock
